--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>Lean Superhelden </title>
+  <title>Lean Superhelden – Flipcards</title>
   <style>
     * {
       box-sizing: border-box;
@@ -12,30 +12,42 @@
       font-family: sans-serif;
       background: #f9f9f9;
       margin: 0;
-      padding: 40px;
-      display: flex;
-      justify-content: center;
+      padding: 40px 20px;
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 1.8em;
+      margin-bottom: 0.5em;
+    }
+
+    p.intro {
+      max-width: 700px;
+      margin: 0 auto 40px;
+      font-size: 1em;
+      line-height: 1.5;
     }
 
     .card-container {
       display: flex;
       flex-wrap: wrap;
-      gap: 20px;
       justify-content: center;
-      max-width: 1200px;
+      gap: 20px;
+      max-width: 1400px;
+      margin: 0 auto;
     }
 
     .flipcard {
       width: 240px;
-      height: 340px;
+      height: 360px;
       perspective: 1000px;
+      flex: 0 1 auto;
     }
 
     .flipcard-inner {
       position: relative;
       width: 100%;
       height: 100%;
-      text-align: center;
       transition: transform 0.6s;
       transform-style: preserve-3d;
       cursor: pointer;
@@ -49,8 +61,8 @@
       position: absolute;
       width: 100%;
       height: 100%;
-      border-radius: 12px;
       backface-visibility: hidden;
+      border-radius: 16px;
       overflow: hidden;
       box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
     }
@@ -58,27 +70,39 @@
     .flipcard-front img {
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      object-fit: contain;
+      image-rendering: auto;
+      display: block;
     }
 
     .flipcard-back {
       background-color: #ffffff;
       color: #333;
       transform: rotateY(180deg);
-      padding: 16px;
+      padding: 20px;
       box-sizing: border-box;
       overflow-y: auto;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
     }
 
     .flipcard-back p {
-      font-size: 0.9em;
-      line-height: 1.4;
+      font-size: 0.95em;
+      line-height: 1.5;
+    }
+
+    @media (max-width: 1300px) {
+      .card-container {
+        justify-content: center;
+      }
     }
 
     @media (max-width: 768px) {
       .flipcard {
         width: 45%;
-        height: 320px;
+        height: 340px;
       }
     }
 
@@ -92,74 +116,74 @@
 </head>
 <body>
 
-<div class="card-container">
+  <h1>Wer steht für welches Prinzip?</h1>
+  <p class="intro">
+    <strong>Klicke auf die Karten, um sie umzudrehen</strong> und herauszufinden, welches Prinzip sie verkörpern – und welche Aufgabe sie im Lean-Universum übernehmen.
+  </p>
 
-  <!-- Valo -->
-  <div class="flipcard" onclick="this.classList.toggle('flipped')">
-    <div class="flipcard-inner">
-      <div class="flipcard-front">
-        <img src="Valo Poster.png" alt="Valo">
-      </div>
-      <div class="flipcard-back">
-        <p><strong>Valo</strong> wiederspiegelt das Lean-Prinzip „Wert definieren“.<br>
-        Er erkennt, was wirklich Wert für den Kunden schafft.</p>
+  <div class="card-container">
+
+    <!-- Valo -->
+    <div class="flipcard" onclick="this.classList.toggle('flipped')">
+      <div class="flipcard-inner">
+        <div class="flipcard-front">
+          <img src="Valo Poster.png" alt="Valo">
+        </div>
+        <div class="flipcard-back">
+          <p><strong>Valo</strong> spiegelt das Lean-Prinzip „Wert definieren“ wider. Er erkennt, was wirklich Wert für den Kunden schafft.</p>
+        </div>
       </div>
     </div>
-  </div>
 
-  <!-- Streamo -->
-  <div class="flipcard" onclick="this.classList.toggle('flipped')">
-    <div class="flipcard-inner">
-      <div class="flipcard-front">
-        <img src="Streamo Poster.png" alt="Streamo">
-      </div>
-      <div class="flipcard-back">
-        <p><strong>Streamo</strong> verkörpert das Lean-Prinzip „Wertstrom analysieren“.<br>
-        Er macht sichtbar, wie der Wert durch den gesamten Prozess fließt.</p>
+    <!-- Streamo -->
+    <div class="flipcard" onclick="this.classList.toggle('flipped')">
+      <div class="flipcard-inner">
+        <div class="flipcard-front">
+          <img src="Streamo Poster.png" alt="Streamo">
+        </div>
+        <div class="flipcard-back">
+          <p><strong>Streamo</strong> verkörpert das Lean-Prinzip „Wertstrom analysieren“. Er macht sichtbar, wie der Wert durch den gesamten Prozess fließt.</p>
+        </div>
       </div>
     </div>
-  </div>
 
-  <!-- Flowa -->
-  <div class="flipcard" onclick="this.classList.toggle('flipped')">
-    <div class="flipcard-inner">
-      <div class="flipcard-front">
-        <img src="Flowa Poster.png" alt="Flowa">
-      </div>
-      <div class="flipcard-back">
-        <p><strong>Flowa</strong> steht für das Lean-Prinzip „Fluss erzeugen“.<br>
-        Sie sorgt dafür, dass Arbeit reibungslos und ohne Unterbrechung voranschreitet.</p>
+    <!-- Flowa -->
+    <div class="flipcard" onclick="this.classList.toggle('flipped')">
+      <div class="flipcard-inner">
+        <div class="flipcard-front">
+          <img src="Flowa Poster.png" alt="Flowa">
+        </div>
+        <div class="flipcard-back">
+          <p><strong>Flowa</strong> steht für das Lean-Prinzip „Fluss erzeugen“. Sie sorgt dafür, dass Arbeit reibungslos und ohne Unterbrechung voranschreitet.</p>
+        </div>
       </div>
     </div>
-  </div>
 
-  <!-- Pulla -->
-  <div class="flipcard" onclick="this.classList.toggle('flipped')">
-    <div class="flipcard-inner">
-      <div class="flipcard-front">
-        <img src="Pulla Poster.png" alt="Pulla">
-      </div>
-      <div class="flipcard-back">
-        <p><strong>Pulla</strong> repräsentiert das Lean-Prinzip „Pull statt Push“.<br>
-        Sie stellt sicher, dass nur dann produziert wird, wenn echte Nachfrage besteht.</p>
-      </div>
-    </div>
-  </div>
-
-  <!-- Perfa -->
-  <div class="flipcard" onclick="this.classList.toggle('flipped')">
-    <div class="flipcard-inner">
-      <div class="flipcard-front">
-	<img src="Perfa Poster.png" alt="Perfa">
-	</div>
-	<div class="flipcard-back">
-        <p><strong>Perfa</strong> repräsentiert das Lean-Prinzip „Streben nach Perfektion“.<br>
-        Sie sorgt für kontinuierliche Verbesserung und nachhaltige Veränderung.</p>
+    <!-- Pulla -->
+    <div class="flipcard" onclick="this.classList.toggle('flipped')">
+      <div class="flipcard-inner">
+        <div class="flipcard-front">
+          <img src="Pulla Poster.png" alt="Pulla">
+        </div>
+        <div class="flipcard-back">
+          <p><strong>Pulla</strong> repräsentiert das Lean-Prinzip „Pull statt Push“. Sie stellt sicher, dass nur dann produziert wird, wenn echte Nachfrage besteht.</p>
+        </div>
       </div>
     </div>
-  </div>
 
-</div>
+    <!-- Perfa -->
+    <div class="flipcard" onclick="this.classList.toggle('flipped')">
+      <div class="flipcard-inner">
+        <div class="flipcard-front">
+          <img src="Perfa Poster.png" alt="Perfa">
+        </div>
+        <div class="flipcard-back">
+          <p><strong>Perfa</strong> repräsentiert das Lean-Prinzip „Streben nach Perfektion“. Sie sorgt für kontinuierliche Verbesserung und nachhaltige Veränderung.</p>
+        </div>
+      </div>
+    </div>
+
+  </div>
 
 </body>
 </html>
