--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8">
-  <title>Lean Superhelden – Flipcards</title>
+  <meta charset="UTF-8" />
+  <title>Lean Superhelden</title>
   <style>
-    * {
-      box-sizing: border-box;
-    }
-
     body {
       font-family: sans-serif;
       background: #f9f9f9;
@@ -18,7 +14,7 @@
 
     h1 {
       font-size: 1.8em;
-      margin-bottom: 0.5em;
+      margin-bottom: 0.2em;
     }
 
     p.intro {
@@ -32,16 +28,15 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 20px;
-      max-width: 1400px;
+      gap: 24px;
+      max-width: 1800px;
       margin: 0 auto;
     }
 
     .flipcard {
-      width: 240px;
-      height: 360px;
+      width: 324px;
+      height: 486px;
       perspective: 1000px;
-      flex: 0 1 auto;
     }
 
     .flipcard-inner {
@@ -70,8 +65,7 @@
     .flipcard-front img {
       width: 100%;
       height: 100%;
-      object-fit: contain;
-      image-rendering: auto;
+      object-fit: cover;
       display: block;
     }
 
@@ -81,7 +75,6 @@
       transform: rotateY(180deg);
       padding: 20px;
       box-sizing: border-box;
-      overflow-y: auto;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -89,27 +82,22 @@
     }
 
     .flipcard-back p {
-      font-size: 0.95em;
+      font-size: 1em;
       line-height: 1.5;
-    }
-
-    @media (max-width: 1300px) {
-      .card-container {
-        justify-content: center;
-      }
+      margin: 0;
     }
 
     @media (max-width: 768px) {
       .flipcard {
         width: 45%;
-        height: 340px;
+        height: auto;
       }
     }
 
     @media (max-width: 480px) {
       .flipcard {
         width: 100%;
-        height: 300px;
+        height: auto;
       }
     }
   </style>
