--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 </head>
 <body>
 
-  <h1>Wer steht für welches Prinzip?</h1>
+  <h2>Wer steht für welches Prinzip?</h2>
   <p class="intro">
     <strong>Klicke auf die Karten, um sie umzudrehen</strong> und herauszufinden, welches Prinzip sie verkörpern – und welche Aufgabe sie im Lean-Universum übernehmen.
   </p>
@@ -130,7 +130,7 @@
           <img src="Streamo Poster.png" alt="Streamo">
         </div>
         <div class="flipcard-back">
-          <p><strong>Streamo</strong> verkörpert das Lean-Prinzip „Wertstrom analysieren“. Er macht sichtbar, wie der Wert durch den gesamten Prozess fließt.</p>
+          <p><strong>Streamo</strong> verkörpert das Lean-Prinzip „Wertstrom analysieren“. Er macht sichtbar, wie der Wert durch den gesamten Prozess fliesst.</p>
         </div>
       </div>
     </div>
