--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           <img src="Streamo Poster.png" alt="Streamo">
         </div>
         <div class="flipcard-back">
-          <p><strong>Streamo</strong> verkörpert das Lean-Prinzip „Wertstrom analysieren“. Er macht sichtbar, wie der Wert durch den gesamten Prozess fließt.</p>
+          <p><strong>Streamo</strong> verkörpert das Lean-Prinzip „Wertstrom analysieren“. Er macht sichtbar, wie der Wert durch den gesamten Prozess fliesst.</p>
         </div>
       </div>
     </div>
