--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
   <h1>Wer steht für welches Prinzip?</h1>
   <p class="intro">
-    <strong>Klicke auf die Karten, um sie umzudrehen</strong> und herauszufinden, welches Prinzip sie verkörpern – und welche Aufgabe sie im Lean-Universum übernehmen.
+    <strong>Klicke auf die Karten, um sie umzudrehen</strong> finde heraus, welches Prinzip sie verkörpern und welche Aufgabe sie im Lean-Universum übernehmen.
   </p>
 
   <div class="card-container">
