Update Valo - Wert definieren.html

--- a/Valo - Wert definieren.html
+++ b/Valo - Wert definieren.html
@@ -20,7 +20,7 @@
     }
 
     .hero-img {
-      width: 320px;
+      width: 360px;
       border-radius: 12px;
       box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
     }
@@ -41,7 +41,7 @@
       content: '';
       position: absolute;
       left: -12px;
-      top: 120px; /* Auf Stirnhöhe anpassen */
+      top: 135px; /* Pfeil auf Stirnhöhe bei 360px Bild */
       width: 0;
       height: 0;
       border-top: 12px solid transparent;
