Update Kanban - das Werkzeug der Lean-Superhelden.html

--- a/Kanban - das Werkzeug der Lean-Superhelden.html
+++ b/Kanban - das Werkzeug der Lean-Superhelden.html
@@ -50,8 +50,12 @@
     strong {
       font-weight: 700;
     }
-    em {
-      font-style: italic;
+    ul {
+      padding-left: 20px;
+      margin-bottom: 1em;
+    }
+    li {
+      margin-bottom: 0.5em;
     }
   </style>
 </head>
@@ -59,19 +63,19 @@
   <div class="container">
     <img src="Kanban.png" alt="Kanban" class="hero-img" />
     <div class="speech-bubble">
-      <p><strong>Hallo! Ich bin Kanban</strong> – kein Prinzip, aber das wichtigste Werkzeug der Lean-Helden.</p>
+      <p><strong>Hallo! Ich bin Kanban</strong> – kein Prinzip, aber das wichtigste Werkzeug der Lean-Superhelden.</p>
       <p>Während Valo, Streamo, Flowa, Pulla und Perfa die fünf Prinzipien des Lean Managements verkörpern, bin ich das, womit sie arbeiten. Ich bin ihr Schild gegen Chaos, ihr Kompass durch komplexe Abläufe und ihre Taschenlampe in unübersichtlichen Prozessen.</p>
-      <p><strong>Meine Superkraft?</strong> Ich mache Arbeit sichtbar, steuerbar – und verschwendungsfrei.</p>
-      <p>Ich zeige, was gerade läuft, was blockiert ist und was als Nächstes ansteht. Mit mir erkennen Teams, wo es klemmt, wo Prioritäten fehlen und wo sich Arbeit staut.</p>
-      <p>Ob im Büro, in der Werkstatt, im Projekt oder in der IT – ich bringe Struktur dorthin, wo sonst Unsicherheit herrscht. Und ich sorge dafür, dass Chaostrax keine Verstecke mehr hat.</p>
-      <p><strong>Mit einfachen Mitteln wie Boards, Karten und Spalten schaffe ich Transparenz:</strong></p>
+      <p><strong>Meine Stärke?</strong> Ich mache Arbeit sichtbar, steuerbar – und dadurch gezielt verbesserbar.</p>
+      <p>Ich zeige, was gerade läuft, was blockiert ist und was als Nächstes ansteht. Mit mir erkennen Teams, wo Arbeit stockt, wo sich Aufgaben stauen und wo der Fokus verloren geht. Ich helfe, wieder Struktur zu schaffen – und Klarheit in den Prozess zu bringen.</p>
+      <p>Ob im Büro, in der Werkstatt, im Projekt oder in der IT – ich bringe Ordnung dorthin, wo sonst Unsicherheit herrscht. Und ich sorge dafür, dass Chaostrax keine Verstecke mehr hat.</p>
+      <p><strong>Mit einfachen Mitteln wie Boards, Karten und Spalten mache ich Arbeit greifbar:</strong></p>
       <ul>
         <li><strong>To Do</strong> – Was steht an?</li>
-        <li><strong>In Bearbeitung</strong> – Woran wird gerade gearbeitet?</li>
+        <li><strong>In Bearbeitung</strong> – Woran wird gearbeitet?</li>
         <li><strong>Erledigt</strong> – Was ist abgeschlossen?</li>
       </ul>
-      <p>Das Ergebnis? Klarheit, Fokus und kontinuierliche Verbesserung. Ich helfe dir, <strong>Pull</strong> praktisch umzusetzen, Engpässe sichtbar zu machen und Abläufe zu stabilisieren.</p>
-      <p>Also, worauf wartest du? Nutze mich, um deine Prozesse zu ordnen, dein Team zu entlasten und echten Flow zu schaffen.</p>
+      <p>So entsteht Übersicht, Teamarbeit wird einfacher – und Verbesserung wird zur Gewohnheit.</p>
+      <p><strong>Und jetzt…</strong> zu meiner Geschichte. Woher ich komme. Und warum ich heute überall dort im Einsatz bin, wo Klarheit gebraucht wird.</p>
     </div>
   </div>
 </body>
