--- a/Verschwendungsarten nach Muda.html
+++ b/Verschwendungsarten nach Muda.html
@@ -13,7 +13,7 @@
     }
 
     .content-wrapper {
-      max-width: 900px;
+      max-width: 1100px;
       display: flex;
       flex-direction: column;
       gap: 40px;
@@ -25,7 +25,7 @@
       line-height: 1.6;
       color: #333;
       text-align: center;
-      max-width: 700px;
+      max-width: 800px;
     }
 
     .card-container {
@@ -38,27 +38,28 @@
     .card {
       background: white;
       border: 1px solid #ddd;
-      border-radius: 10px;
+      border-radius: 12px;
       display: flex;
       align-items: center;
-      padding: 20px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.05);
-      gap: 20px;
+      padding: 24px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+      gap: 40px;
     }
 
     .card img {
-      width: 120px;
-      border-radius: 8px;
+      width: 200px;
+      height: auto;
+      border-radius: 10px;
     }
 
     .card h3 {
       margin: 0 0 10px 0;
-      font-size: 16px;
+      font-size: 18px;
     }
 
     .card p {
       margin: 0;
-      font-size: 14px;
+      font-size: 15px;
     }
   </style>
 </head>
@@ -110,7 +111,7 @@
         <img src="Movi.png" alt="Movi">
         <div>
           <h3>Movi (Bewegung)</h3>
-          <p>Unnötige Bewegung von Personen → z. B. lange Wege, Suchen von Werkzeugen oder Dokumenten → Zeitverlust, Ermüdung.</p>
+          <p>Unnötige Bewegung von Personen → z. B. lange Wege, Suchen von Werkzeugen oder Dokumenten → Zeitverlust, Ermüdung.</p>
         </div>
       </div>
       <div class="card">
