Update Chaostrax mit Minions.html

--- a/Chaostrax mit Minions.html
+++ b/Chaostrax mit Minions.html
@@ -58,7 +58,7 @@
     Gemeinsam mit ihnen lernst du, wie du Prozesse klarer, effizienter und verschwendungsfrei gestaltest.</p>
 
     <p><strong>Starte jetzt dein Training.</strong><br>
-    Werde Teil der Lean Allianz – und hilf mit, Chaostrax auch in deinem Umfeld zu besiegen!</p>
+    Werde Teil der Lean Heldenallianz – und hilf mit, Chaostrax auch in deinem Umfeld zu besiegen!</p>
 
     <img src="Chaostrax mit Minions.png" alt="Chaostrax mit Minions">
   </div>
